# h7

./: .gitignore  Makefile  README.md  boot_addresses.txt  flash.sh  internal_i2c.txt  runner.sh  upload.sh
.circleci/: config.yml
arduino_bootloader/: boot_addresses.txt  flash-bootloader.sh  rev.txt
cm7/: Cargo.toml  Makefile.toml  build.rs  flash.sh  memory.x
cm7/.cargo/: config
cm7/src/: consts.rs  crypto.rs  display.rs  flash.rs  globals.rs  led.rs  logger.rs  main.rs  panic.rs  sdram.rs  system.rs  terminal.rs  time.rs  usb.rs
cm7/src/dsi/: dsi_consts.rs  mod.rs  phy_timer_config.rs  video_config.rs
cm7/src/mem/: mod.rs  sdram.rs
cm7/src/mem/qspi_fs/: mod.rs  mx25l.rs
cm7/src/mem/qspi_store/: mod.rs  mx25l.rs
cm7/src/mem/sdmmc_fs/: mod.rs
cm7/src/sdmmc_fs/: error.rs  mod.rs
data_dumps/: i2c_start_to_video.csv
h7/: Cargo.toml  Makefile.toml  build.rs  flash.sh  memory.x
h7-api/: Cargo.toml  README.md
h7-api/src/: lib.rs
h7-app/: Cargo.toml  README.md  build.rs  h7-app.ld
h7-app/.cargo/: config
h7-app/src/: lib.rs
h7-applib/: Cargo.toml  README.md  build.rs  cbindgen.toml  h7-app.ld
h7-applib/.cargo/: config
h7-applib/src/: c_api.rs  display.rs  lib.rs
h7-apps/: README.md
h7-apps/testapp/: Cargo.toml  Makefile  Makefile.toml
h7-apps/testapp-c/: Cargo.toml  Makefile.toml  build.rs
h7-apps/testapp-c/src/: main.c  main.rs
h7-apps/testapp-rs/: Cargo.toml  Makefile.toml
h7-apps/testapp-rs/src/: main.rs
h7-apps/testapp/.cargo/: config
h7-apps/testapp/src/: main.rs
h7-apps/testapp_rs/: Cargo.toml  Makefile.toml
h7-apps/testapp_rs/.cargo/: config
h7-apps/testapp_rs/src/: lib.rs
h7-cm7/: Cargo.toml  Embed.toml  Makefile.toml  README.md
h7-cm7/.cargo/: config
h7-cm7/src/: board.rs  display.rs  led.rs  logger.rs  main.rs  panic.rs  pmic.rs  time.rs  utils.rs
h7-cm7/src/dsi/: mod.rs  video_config.rs
h7-cm7/src/fs/: path.rs
h7-cm7/src/fs/qspi_store/: mod.rs
h7-cm7/src/fs/qspi_store/mx25l/: cmd.rs  mod.rs  status.rs
h7-cm7/src/fs/sdmmc_fs/: mod.rs
h7-cm7/src/mem/: mod.rs  sdram.rs
h7-cm7/src/terminal/: mod.rs
h7-cm7/src/terminal/commands/: io.rs  sys.rs
h7-cm7/src/terminal/menu/: mod.rs
h7-display/: Cargo.toml
h7-display-simulator/: Cargo.toml
h7-display-simulator/src/: main.rs
h7-display/src/: display.rs  framebuffer.rs  lib.rs
h7-mkapp/: Cargo.toml  README.md
h7-mkapp/src/: main.rs
h7-sim/: Cargo.toml
h7-sim/src/: input.rs  main.rs  utils.rs
h7-uart-terminal/: Cargo.toml  README.md  output.txt  runner.sh
h7-uart-terminal/.cargo/: config.toml
h7-uart-terminal/src/: main.rs
h7/src/: api.rs  app.rs  display.rs  led.rs  logger.rs  main.rs  panic.rs  pmic.rs  system.rs  terminal.rs  time.rs  utils.rs
h7/src/fs/: mod.rs
h7/src/fs/qspi_store/: mod.rs  mx25l.rs
h7/src/fs/sdmmc_fs/: error.rs
h7/src/mem/: mod.rs  sdram.rs
h7/src/mem/qspi_store/: mod.rs
h7/src/mem/sdmmc_fs/: error.rs  mod.rs  path.rs
h7/src/menu/: error.rs  mod.rs
h7/src/terminal/: mod.rs
h7/src/terminal/commands/: fs.rs  io.rs  mod.rs  program.rs  sys.rs  time.rs  utils.rs
h7/src/terminal/menu/: error.rs  mod.rs
libs/api/: Cargo.toml  build.rs  cbindgen.toml
libs/api/src/: lib.rs
libs/graphics/include/: graphics.h
libs/hal/include/: hal.h
libs/hal/src/: hal.c
libs/mailbox/include/: mailbox.h
libs/mailbox/src/: mailbox.c
libs/mailbox/test/: main.c
libs/menu/src/: README.md  error.rs  lib.rs
libs/ringfifo/: Cargo.toml
libs/ringfifo/src/: lib.rs
pi-uart-keyboard/: Cargo.toml
pi-uart-keyboard/.cargo/: config.toml
pi-uart-keyboard/src/: main.rs
source/: .mxproject  .project  h7.ioc
source/CM4/: .cproject  .project  source_CM4.cfg  source_CM4.launch
source/CM4/Core/Inc/: main.h  stm32h7xx_hal_conf.h
source/CM4/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
source/CM4/Debug/: makefile  objects.list  source_CM4.list  sources.mk
source/CM4/Debug/Common/Src/: subdir.mk
source/CM4/Debug/Core/Src/: subdir.mk
source/CM4/Debug/Drivers/STM32H7xx_HAL_Driver/: subdir.mk
source/CM4/Debug/FATFS/App/: subdir.mk
source/CM4/Debug/Middlewares/ST/STM32_USB_Host_Library/: subdir.mk
source/CM4/Debug/USB_HOST/App/: subdir.mk
source/CM7/: .cproject  .project  source_CM7.launch
source/CM7/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
source/CM7/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
source/CM7/Debug/: makefile  objects.list  source_CM7.list
source/CM7/Debug/Common/Src/: subdir.mk
source/CM7/Debug/Core/Src/: subdir.mk
source/CM7/Debug/Drivers/STM32H7xx_HAL_Driver/: subdir.mk
