[package]
name = "cm7"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7" # Upgrade blocked by stm32h7xx-hal
cortex-m-alloc = { version = "0.4", package = "alloc-cortex-m" }
stm32-fmc = "0.2"
# stm32h7xx-hal = { version = "0.10", features = [ "stm32h747cm7", "unproven", "rt", "fmc", "ltdc", "rtc", "crc", "usb_hs" ] }
# stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal.git", features = [ "stm32h747cm7", "unproven", "rt", "fmc", "ltdc", "rtc", "crc", "usb_hs" ] }
stm32h7xx-hal = { path = "../../stm32h7xx-hal", features = [ "stm32h747cm7", "unproven", "rt", "fmc", "ltdc", "rtc", "crc", "usb_hs" ] }
# usb-device = "0.2"
embedded-hal = { version = "0.2", features = [ "unproven" ] }
atecc608x = { path = "../../atecc608x" }
anx7625 = { path = "../../anx7625" }
# Rusty_CryptoAuthLib = { version = "1", default-features = false }
embedded-display-controller = "0.1"
log = { version = "0.4", default-features = false }

cortex-m-log = { version = "0.7", features = [ "semihosting", "log-integration" ], optional = true }
panic-semihosting = { version = "0.5", optional = true }
cortex-m-semihosting = { version = "0.3", optional = true }
lazy_static = { version = "1.4", features = [ "spin_no_std" ], optional = true }

[features]
default = []
semihosting = [
    "cortex-m-log",
    "panic-semihosting",
    "cortex-m-semihosting",
    "lazy_static"
]

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
incremental = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
lto = true # better optimizations
opt-level = "s" # optimize for binary size
