[package]
name = "h7-applib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "staticlib", "rlib" ]

[dependencies]
h7-api = { path = "../h7-api" }

[features]
default = [ "default-panic-handler", "default-alloc-handler" ]
alloc = []
c-api = []
default-panic-handler = []
default-alloc-handler = []

# [target.'cfg(not(target_os = "none"))'.dependencies]
# embedded-graphics-simulator = "0.3.0"
# embedded-graphics = "0.7.1"
# fontdue = "0.6.2"
# pc-keyboard = { git = "https://github.com/rust-embedded-community/pc-keyboard" }
# lazy_static = "1.4"
# parking_lot = "0.12.0"

[build-dependencies]
cbindgen = "*"
