[package]
name = "h7-uart-terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.13", optional = true }
serialport = { version = "4.0.1", optional = true }

[features]
default = [ "linux" ]
linux = [ "serialport" ]
rpi = [ "rppal" ]
