[package]
name = "testapp_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "dylib", "staticlib" ]

[dependencies]
h7-applib = { path = "../../h7-applib", features = [ "alloc" ] }

[profile.dev]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size in flash
incremental = false

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size in flash
incremental = false
lto = true # better optimizations
opt-level = "s" # optimize for binary size, if size is availabe, change to 3?
